--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -2,6 +2,7 @@
     flex-shrink: 0;
     margin: 0 auto;
     align-items: flex-start;
+    padding-bottom: 60px;
 }
 
 @media screen and (min-width: 1110px) {
@@ -21,5 +22,6 @@
     .footer {
         max-width: 282px;
         flex-direction: row;
+        padding-bottom: 36px;
     }
 }
