feat:(11) added new className for deleteButton and included it into index.css

--- a/src/blocks/element/__trash/element__trash.css
+++ b/src/blocks/element/__trash/element__trash.css
@@ -1,4 +1,5 @@
 .element__trash {
+    visibility: hidden;
     position: absolute;
     background-image: url(../../../images/Trash.svg);
     background-repeat: no-repeat;
